// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-template-siblings should get sibling templates 1`] = `
{
  "content": [
    {
      "text": "{"totalBefore":2,"totalAfter":0,"items":[{"name":"_Test Target Template","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"flags":[],"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-template-siblings should handle non-existent template 1`] = `
{
  "content": [
    {
      "text": "Error using get-template-siblings:
{
  "message": "Request failed with status code 404",
  "response": ""
}",
      "type": "text",
    },
  ],
}
`;
